# OpenMAMA-omnm

./: .appveyor.yml  .sconsign.dblite  .travis.yml  CMakeLists.txt  Dockerfile  OpenMAMA-omnm.sln  OpenMAMA-omnm.vcxproj  README.md  SConstruct
.github/workflows/: main.yml
.sconf_temp/: conftest_0.c  conftest_2
objects/: Field.os  Iterator.os  Payload.os  unittests
src/: Benchmarker.cpp  Benchmarker.h  CMakeLists.txt  Field.cpp  Iterator.cpp  Iterator.h  Payload.cpp  Payload.h  SConscript  UnitTests.cpp  omnmmsgpayloadfunctions.h  omnmmsgpayloadimpl.h
src/mama/integration/bridge/: omnmmsgpayloadfunctions.h
